@@ -21,9 +21,9 @@ AUX gawk-3.1.5-utf-8-strcat.patch 1456 RMD160 4104db0c27585f6c160adeca9b432ff5f8
 AUX gawk-3.1.5-wconcat.patch 495 RMD160 29f5eea5b300d8efc482e960b257292e5e5b19f8 SHA1 a40e527ef2741d8dea4e481852f887097dd2c921 SHA256 bc812044e12c291c0419853e3862e5dad60c17bfee8cffeb09135995b0694315
 AUX gawk-3.1.6-gnuinfo.patch 895 RMD160 2013db4a7e1b2557f567203576218f09e9e3f091 SHA1 8b9f8811beac46835530477fe82f0a6e7dad230b SHA256 e0e94e01bc061bdf41160fafc406e2c05bc6d27f3e26847899f020a01f46c98a
 AUX gawk-3.1.6-mint.patch 3080 RMD160 872a3bd83deb045d0f3b33f7891ca863bf1675bc SHA1 7dc28d557a0bd71150c0dabed242ca4d932c1b10 SHA256 ee5c90ed63ce35b30dd3b903742d16833620fd39a63314ccec550f9cb6bf76a4
-DIST gawk-3.1.5.tar.gz 2310919 RMD160 8d875f4ea9e9ef5c932468cf43c691f6e082b197 SHA1 6cb385b4bc33780a5a4288b787523cbd4a30a900 SHA256 463dcb9d0ca398b1d4f5a332f6cd9cec56441265fca616f2ea1b44d459e9f0f8
 DIST gawk-3.1.6.tar.bz2 1861630 RMD160 e2639935d87d5c9fdb115a58ab1f598b69a76216 SHA1 fb45bded207af6a8e46cd63fcbb6fb064ecee607 SHA256 513fdd5a0bd1b467bd4993eb3adb4690f65fff6857c9e2ed1a3e46d72151cb6c
-EBUILD gawk-3.1.5-r05.1.ebuild 4069 RMD160 13706fb86624ab192be2d54d7e89f6a5fa9d9650 SHA1 efa418fe5cef817bd6f1b1cfbe862f8356be15fe SHA256 bb3a52f798f64098d656aaf4c8ca85d926abd02e03931e04f0e29584de5f045a
+DIST gawk-3.1.7.tar.bz2 2365837 RMD160 f35c04e947357404d410d62df87df9d6a88079de SHA1 77dfacb793d579fa6830152d943096bc4362a465 SHA256 f12b76b8963c5a438a56a73223ad29aeb900c7f004deb6242fab3324188ede71
 EBUILD gawk-3.1.6.ebuild 3697 RMD160 fc884a653caf415ca9ca8e93924d40a9a91f7a67 SHA1 102ca709c37cd1a388da50e7c15f985c57f95292 SHA256 3e480a3c2aed5371996d5c89a10797539b027d30bf7f9aad210cd61afaeafa78
-MISC ChangeLog 17783 RMD160 b1c58e65f409a132167677a833766fa4eb08c935 SHA1 90ae3ec08f068b361fd83d9a206c198945581d14 SHA256 604ac1003b20bd3f4f3a884e0ea8e4744d933ea28c4a4a1196cadcbf56466f8a
-MISC metadata.xml 164 RMD160 f43cbec30b7074319087c9acffdb9354b17b0db3 SHA1 9c213f5803676c56439df3716be07d6692588856 SHA256 f5f2891f2a4791cd31350bb2bb572131ad7235cd0eeb124c9912c187ac10ce92
+EBUILD gawk-3.1.7.ebuild 3678 RMD160 92fadf3e7ccfcfe1b80f7b33ee93d3f625529c19 SHA1 6e6497bf4b6d95352e262ee8b14b0ad0aeb42719 SHA256 a3499612a60373dd3e5bb9dac7c5e108f47b47701a23b608d104c214428c60ed
+MISC ChangeLog 17937 RMD160 d6d77af038a309fea9ba56b79365ca125db60783 SHA1 5408cbb2ebb0430267e7cca0d6f3a4e2f2521026 SHA256 2643e082e7e7fb87ccd59ea4478a3ad13110602423212aac1e643491f41878d3
+MISC metadata.xml 245 RMD160 ede0ab08fadcb30d1055158ce7f6ed8f48a10e89 SHA1 fb14af79d29dd0c303cc421354e70b0657ae02ee SHA256 dbfffafa69728da5daa167a998b875ecfa8453deadd3a57cb384558564f156d4
