@@ -1,6 +1,12 @@
 # ChangeLog for sys-apps/gawk
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-apps/gawk/ChangeLog,v 1.127 2009/05/16 22:02:25 vapier Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-apps/gawk/ChangeLog,v 1.128 2009/08/15 23:53:29 vapier Exp $
+
+*gawk-3.1.7 (15 Aug 2009)
+
+  15 Aug 2009; Mike Frysinger <vapier@gentoo.org> +gawk-3.1.7.ebuild,
+  metadata.xml:
+  Version bump #280701 by Jeremy Olexa.
 
   16 May 2009; Mike Frysinger <vapier@gentoo.org> files/filefuncs/Makefile:
   Respect CPPFLAGS when building filefuncs #209129 by Stuart Shelton.
